--- a/.gitignore
+++ b/.gitignore
@@ -103,12 +103,16 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Docker
+.env.docker.local
 
 # Spyder project settings
 .spyderproject
