Add HuggingFace model support, enhance metadata handling, and improve Docker configurations

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,16 @@
 API_KEY=your-secret-api-key-here
 HOST=0.0.0.0
 PORT=8000
-DEBUG=False
+DEBUG=false
 
 # Directory temporanea per le immagini (opzionale)
 TEMP_DIR=./temp_images
+
+# Credenziali HuggingFace (opzionale)
+# Necessario per accedere ai modelli privati o per evitare limiti di rate
+HF_TOKEN=your-huggingface-token-here
+
+# Configurazione cache HuggingFace (gestita automaticamente dal Docker)
+# HF_HOME=/app/.cache/huggingface
+# TRANSFORMERS_CACHE=/app/.cache/huggingface/transformers
+# TORCH_HOME=/app/.cache/torch
